--- a/Changes
+++ b/Changes
@@ -4,8 +4,16 @@
 
 2019-xx-xx
 
-    * Locale::KeyedText version 2.1.1 for Perl 5 is released on CPAN as
+    * Locale::KeyedText version 2.1.1 for Perl is released on CPAN as
     Locale-KeyedText-2.1.1.tar.gz.
+
+    * Between the prior release and this one, the programming language
+    formerly known as "Perl 6" was renamed to "Raku".  As such, all
+    documentation that refers to that language was updated to use its new
+    name, and all language that referred to "Perl 5" now simply refers to
+    "Perl" because "Perl" now unambiguously means Perl 5.  The only
+    exception to these changes is in documentation about history, such as
+    all prior entries in this Changes file.
 
     * Lowered the declared minimum Perl version dependency to 5.8.0 (2002)
     from 5.8.1 (2003) since the prior .1 requirement seemed rather
@@ -26,6 +34,9 @@
     * Locale::KeyedText is now released under the terms of the Artistic
     License version 2 rather than the GNU Lesser General Public License
     (LGPL) version 3+.
+
+    * Updated all documentation to use an updated canonical Muldis Data
+    Systems url of https://muldis.com rather than several http:// variants.
 
     * Incremented all copyright year range-ends to 2019.
 
