--- a/README
+++ b/README
@@ -6,7 +6,7 @@ by Darren Duncan <darren@DarrenDuncan.net>
 
 PREFACE
 
-This distribution features the Perl 5 module named "Locale::KeyedText"; see
+This distribution features the Perl module named "Locale::KeyedText"; see
 the file lib/Locale/KeyedText.pm for the main documentation, which is in
 POD format, plus the Dependencies and Copyright.  The distribution also
 includes a Changes file to say what changes already happened, and a TODO
@@ -19,15 +19,15 @@ KEEPING UP TO DATE
 
 My module set is constantly under development.  The canonical copies are
 all linked to through my personal website, "http://www.darrenduncan.net/",
-or through my business website, "http://www.muldis.com/".
+or through my business website, "https://muldis.com".
 
 For those of you that are interested in the bleeding edge of development, I
 have all parts of the Locale::KeyedText project in one or more public
-repositories.  The Perl 5 Locale::KeyedText project is in a Git repository
-whose public clone url is "git://github.com/muldis/Locale-KeyedText-Perl5.git" and
-whose web information url is at "http://github.com/muldis/Locale-KeyedText-Perl5".
-The Perl 6 Locale::KeyedText project used to be in a Subversion repository for
-the Perl 6 Pugs project but the host domain pugscode.org has since expired.
+repositories.  The Perl Locale::KeyedText project is in a Git repository
+whose public clone url is "git://github.com/muldis/Locale-KeyedText.git" and
+whose web information url is at "https://github.com/muldis/Locale-KeyedText".
+The Raku Locale::KeyedText project used to be in a Subversion repository for
+the Raku Pugs project but the host domain pugscode.org has since expired.
 
 You can download slightly older versions of all of my modules from the
 public CPAN archives at "http://www.cpan.org/authors/id/D/DU/DUNCAND/", or
@@ -38,7 +38,7 @@ an organized and searchable fashion.  Their main search site is at
 "http://search.cpan.org", and my own DUNCAND author page is at
 "http://search.cpan.org/search?author=DUNCAND".
 
-The main CPAN search site url for Locale::KeyedText for Perl 5 is
+The main CPAN search site url for Locale::KeyedText for Perl is
 "http://search.cpan.org/dist/Locale-KeyedText/"; that is the url you should
 link to presently if you want something to consider the "home page" of
 Locale::KeyedText; it is best to refer people there by default.
