--- a/Changes
+++ b/Changes
@@ -2,6 +2,17 @@
                                   Changes
 ---------------------------------------------------------------------------
 
+20xx-xx-xx
+
+    * Locale::KeyedText version 2.1.2 for Perl is released on CPAN as
+    Locale-KeyedText-2.1.2.tar.gz.
+
+    * Make the distro pass the Perl Kwalitee "has_abstract_in_pod" test:
+    For every pod file, tweak its NAME section so the abstract
+    is on the same line as the package name rather than the next line.
+
+    * TODO: meta_yml_has_provides
+
 2019-10-20
 
     * Locale::KeyedText version 2.1.1 for Perl is released on CPAN as
